crates/shell/src/parser/program/tests/snapshots/omp_shell__parser__program__tests__extended_test__parse_extended_test_string_not_equal.snap
---
source: brush-parser/src/parser/tests/extended_test.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ \"$a\" != \"$b\" ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              ExtendedTest(ExtendedTestExprCommand(
                expr: BinaryTest(StringDoesNotExactlyMatchPattern, Word(
                  value: "\"$a\"",
                  loc: "[location]",
                ), Word(
                  value: "\"$b\"",
                  loc: "[location]",
                )),
                loc: "[location]",
              ), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
